# discord.cpp

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile
cmake/: discordcppConfig.cmake.in
examples/: BasicConsumer.cpp
include/: Client.hpp
include/events/: Dispatcher.hpp
include/gateway/: Event.hpp  Gateway.hpp  Payload.hpp
include/http/: Client.hpp
include/models/: Channel.hpp  ClientType.hpp  Event.hpp  GatewayPayload.hpp  Guild.hpp  Member.hpp  Message.hpp  Ready.hpp  Role.hpp  Snowflake.hpp  Subscription.hpp  User.hpp
scripts/: ws_test_server.py
src/: Client.cpp
src/events/: Dispatcher.cpp
src/gateway/: Gateway.cpp
src/http/: Client.cpp
src/models/: Channel.cpp  Guild.cpp  Member.cpp  Message.cpp  Ready.cpp  User.cpp
tests/: EventDispatcherTests.cpp
